# alephium-stats-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config_migration.env  config_tests.env  docker-compose.yaml  entrypoint.sh  lets.yaml  pyproject.toml  pytest.ini
alephium_stats/: app.py  common.py  config.py  crud.py  deps.py  exceptions.py  factory.py  responses.py  run_backend.py  run_worker.py
alephium_stats/stats/: responses.py  routes.py
alephium_stats/utils/: utils.py
alephium_stats/utils/alephium/: exceptions.py  explorer.py  node.py  types.py
alephium_stats/websocket/: routes.py  tasks.py
scripts/: generate_client.sh  websocket_client.py
tests/: conftest.py  test_stats_routes.py
tests/fixtures/: stats_fixtures.py
